--- a/blog-view/src/assets/css/base.css
+++ b/blog-view/src/assets/css/base.css
@@ -4,7 +4,7 @@ body,
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #efefef;
+    background-color: #fff;
     background-attachment: fixed;
     background-size: cover;
     background-position: left top;
